UIP-2502 fixed unit-input error message being cutoff

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2560,6 +2560,10 @@ input[type=file] {
                 }
             }
         }
+        .input-message__text {
+            white-space: initial;
+            word-break: break-word;
+        }
         &.reversed {
             .input-text {
                 input[type=text] {
